# test-usbdevice

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  UsbDeviceTest.cpp  UsbDeviceTest.hpp  main.cpp  testBulkTransfer.cpp  testConfiguration.cpp  testConnection.cpp  testControlTransfer.cpp
